--- a/index.html
+++ b/index.html
@@ -414,9 +414,9 @@
             <div class="footer-content">
               <div class="footer-info">
                 <h3>Masjid Al-Muhajirin</h3>
-                <p>Bumi Harapan Blok BB, Kelurahan Cibiru Hilir, Kecamatan Cileunyi, Bandung</p>
+                <p>Bumi Harapan Blok BB RW 14, Kelurahan Cibiru Hilir, Kecamatan Cileunyi, Bandung</p>
                 <p>Maps: <a href="https://www.google.com/maps/place/Masjid+Al-Muhajjirin/@-6.946259,107.715307,17z/data=!3m1!4b1!4m6!3m5!1s0x2e68c3003218b3b7:0xb8668586b27c1f4c!8m2!3d-6.946259!4d107.715307!16s%2Fg%2F11m59ndc_x?entry=ttu&g_ep=EgoyMDI1MDQyMy4wIKXMDSoASAFQAw%3D%3D">Lokasi Masjid</a></p>
-                <p>Email: info@masjidalmuhajirinbandung.org</p>
+                <p>Email: almuhajirin.bhc@gmail.com</p>
                 
                 <div class="prayer-times-footer">
                   <h4>Jadwal Sholat Hari Ini</h4>
